examples/test/testpolicy15767.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15767
  namespace: namespace11
spec:
  podSelector:
    matchLabels:
      key49: value37
      key39: value18
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value38
      podSelector:
        matchLabels:
          key38: value41
          key25: value32
          key48: value26
